--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "nomad",
   "dependencies": {
     "@types/node": "^20.10.0",
+    "lodash.capitalize": "^4.2.1",
     "vitepress": "1.0.0-rc.31"
   },
   "scripts": {
     "docs:dev": "vitepress dev .",
     "docs:build": "vitepress build .",
     "docs:preview": "vitepress preview ."
+  },
+  "devDependencies": {
+    "@types/lodash.capitalize": "^4.2.9"
   }
 }
